k8s_manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "ghworkshop"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "ghworkshop"
  template:
    metadata:
      labels:
        app: "ghworkshop"
    spec:
      containers:
        - name: "api-board"
          image: "naruacr.azurecr.io/board-api:latest"
          ports:
          - containerPort: 8090
